# werewolf-cli

./: Cargo.toml  README.md
src/game/: mod.rs  player.rs  role.rs
